# context_free_grammar_normalizer

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  Grammar.ixx  main.cpp
tests/: CMakeLists.txt  fruitless_removal_tests.cpp  inaccessible_removal_tests.cpp
